IGR-55 test integrated in progress